Bug 1523897 - Only initialize debugger data for modules the first time they are executed r=smaug